# cmake_demo

./: README.org
benchmark_conan/: README.org
bmake_demo/: README.org
bmake_demo/bmake-bin/: BSDMakefile  Makefile
bmake_demo/bmake-lib/: BSDMakefile  Makefile  add.h
t1/: CMakeLists.txt  Makefile
t2/: CMakeLists.txt  Makefile  runhello.sh
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt  Makefile
t3/lib/: CMakeLists.txt  hello.c  hello.h
t3/src/: CMakeLists.txt  main.c
t4_local/: CMakeLists.txt  Makefile
t4_local/lib/: CMakeLists.txt
t4_local/src/: CMakeLists.txt  README.md
